--- a/src/main/resources/application-local.properties.example
+++ b/src/main/resources/application-local.properties.example
@@ -1,8 +1,9 @@
 # === Database Configuration (Edit your own info) ===
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=cecDB
 spring.datasource.username=sa
-spring.datasource.password=200604
+spring.datasource.password=041103
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
 
 # === Hibernate ===
 spring.jpa.hibernate.ddl-auto=none
@@ -14,3 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
+
+# Security configuration
+app.jwtSecret===================springboot=jwt=example========================
+app.jwtExpirationMs=86400000
