--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,14 @@ build/
 ### VS Code ###
 .vscode/
 
+### spring-boot specific ###
+*.jar
+*.war
+*.ear
+
+### local environment ###
+#local environment files
+.env
 
 #local configuration files
 src/main/resources/application-local.properties
