--- a/src/main/resources/application-local.properties.example
+++ b/src/main/resources/application-local.properties.example
@@ -17,5 +17,10 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
 # Security configuration
-app.jwtSecret===================springboot=jwt=example========================
-app.jwtExpirationMs=86400000
+app.jwtSecret= <your_jwt_secret>
+app.jwtExpirationMs=86400000 # 1 day in milliseconds
+
+# Cloudinary configuration
+cloudinary.cloud.name=<your_cloud_name>
+cloudinary.api.key=<your_cloud_key>
+cloudinary.api.secret=<your_cloud_secretKey>
